@@ -1,3 +1,7 @@
+10 March 2009
++ Changes to notes to allow sending to username or display name
+
+
 Version 1.1.0
 --------------------------------------------------------------------
 10 Sept 2008
